// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Title control with bad layout 1`] = `
<Title
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  layout={9999}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Title"
  onClick={[Function]}
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip=""
  top=""
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    id=""
    layout={9999}
    left=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="Title"
    onClick={[Function]}
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={null}
    title="Test label text"
    tooltip=""
    top=""
    visible={true}
    widget={null}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-title-bar ripple"
        disabled={false}
        layout={9999}
        style={Object {}}
        visible={true}
      >
        <div
          className="ui-title-bar ripple sc-htpNat kRNhtA"
          disabled={false}
          style={Object {}}
        >
          <Styled(Label)
            bottom=""
            className="ui-title"
            contentEditable={false}
            controlled={true}
            direction="right"
            disabled={false}
            err={null}
            errorMessage=""
            focus={false}
            height=""
            id=""
            layout={9999}
            left=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Title"
            onClick={[Function]}
            padding=""
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            theme={null}
            title="Test label text"
            tooltip=""
            top=""
            visible={true}
            widget={null}
            width=""
            xcss={
              Array [
                "
	text-align: left;
	flex: 1;
",
              ]
            }
          >
            <Label
              bottom=""
              className="ui-title sc-ifAKCX iOwpyB"
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              err={null}
              errorMessage=""
              focus={false}
              height=""
              id=""
              layout={9999}
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="Title"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onUpdate={[Function]}
              padding=""
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              text="Test label text"
              theme={null}
              title="Test label text"
              tooltip=""
              top=""
              useedit={false}
              visible={true}
              widget={null}
              width=""
              xcss={
                Array [
                  "
	text-align: left;
	flex: 1;
",
                ]
              }
            >
              <Wrapper
                bottom=""
                className="ui-title sc-ifAKCX iOwpyB"
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={false}
                err={null}
                errorMessage=""
                focus={false}
                height=""
                id=""
                layout={9999}
                left=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Title"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onError={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onUpdate={[Function]}
                padding=""
                reset={false}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                text="Test label text"
                theme={null}
                title="Test label text"
                tooltip=""
                top=""
                useedit={false}
                visible={true}
                widget={null}
                width=""
                xcss={
                  Array [
                    "
	text-align: left;
	flex: 1;
",
                  ]
                }
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "itemHoverColor": "#bedb39",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.span
                    className="ui-label ui-title sc-ifAKCX iOwpyB"
                    contentEditable={false}
                    disabled={false}
                    innerRef={[Function]}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    sizing="normal"
                    style={Object {}}
                    suppressContentEditableWarning={true}
                    visible={true}
                  >
                    <span
                      className="ui-label ui-title sc-ifAKCX iOwpyB sc-bwzfXH cEurMc"
                      contentEditable={false}
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      style={Object {}}
                      suppressContentEditableWarning={true}
                    >
                      Test label text
                    </span>
                  </styled.span>
                </ThemeProvider>
              </Wrapper>
            </Label>
          </Styled(Label)>
        </div>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</Title>
`;

exports[`Test creation of a Title control with bad layout 2`] = `
<Title
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  layout={9999}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Title"
  onClick={[Function]}
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip=""
  top=""
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    id=""
    layout={9999}
    left=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="Title"
    onClick={[Function]}
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={null}
    title="Test label text"
    tooltip=""
    top=""
    visible={true}
    widget={null}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-title-bar ripple"
        disabled={false}
        layout={9999}
        style={Object {}}
        visible={true}
      >
        <div
          className="ui-title-bar ripple sc-htpNat kRNhtA"
          disabled={false}
          style={Object {}}
        >
          <Styled(Label)
            bottom=""
            className="ui-title"
            contentEditable={false}
            controlled={true}
            direction="right"
            disabled={false}
            err={null}
            errorMessage=""
            focus={false}
            height=""
            id=""
            layout={9999}
            left=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Title"
            onClick={[Function]}
            padding=""
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            theme={null}
            title="Test label text"
            tooltip=""
            top=""
            visible={true}
            widget={null}
            width=""
            xcss={
              Array [
                "
	text-align: left;
	flex: 1;
",
              ]
            }
          >
            <Label
              bottom=""
              className="ui-title sc-ifAKCX iOwpyB"
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              err={null}
              errorMessage=""
              focus={false}
              height=""
              id=""
              layout={9999}
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="Title"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onUpdate={[Function]}
              padding=""
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              text="Test label text"
              theme={null}
              title="Test label text"
              tooltip=""
              top=""
              useedit={false}
              visible={true}
              widget={null}
              width=""
              xcss={
                Array [
                  "
	text-align: left;
	flex: 1;
",
                ]
              }
            >
              <Wrapper
                bottom=""
                className="ui-title sc-ifAKCX iOwpyB"
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={false}
                err={null}
                errorMessage=""
                focus={false}
                height=""
                id=""
                layout={9999}
                left=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Title"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onError={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onUpdate={[Function]}
                padding=""
                reset={false}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                text="Test label text"
                theme={null}
                title="Test label text"
                tooltip=""
                top=""
                useedit={false}
                visible={true}
                widget={null}
                width=""
                xcss={
                  Array [
                    "
	text-align: left;
	flex: 1;
",
                  ]
                }
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "itemHoverColor": "#bedb39",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.span
                    className="ui-label ui-title sc-ifAKCX iOwpyB"
                    contentEditable={false}
                    disabled={false}
                    innerRef={[Function]}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    sizing="normal"
                    style={Object {}}
                    suppressContentEditableWarning={true}
                    visible={true}
                  >
                    <span
                      className="ui-label ui-title sc-ifAKCX iOwpyB sc-bwzfXH cEurMc"
                      contentEditable={false}
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      style={Object {}}
                      suppressContentEditableWarning={true}
                    >
                      Test label text
                    </span>
                  </styled.span>
                </ThemeProvider>
              </Wrapper>
            </Label>
          </Styled(Label)>
        </div>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</Title>
`;

exports[`Test creation of a Title control with default props 1`] = `
<Wrapper
  bottom=""
  className="test-class"
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  layout={5}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Title"
  onClick={[Function]}
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip=""
  top=""
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-title-bar ripple test-class"
    disabled={false}
    layout={5}
    style={Object {}}
    visible={true}
  >
    <Styled(Label)
      bottom=""
      className="ui-title"
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage=""
      focus={false}
      height=""
      id=""
      layout={5}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip=""
      top=""
      visible={true}
      widget={null}
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 5;
",
        ]
      }
    />
  </styled.div>
</Wrapper>
`;

exports[`Test creation of a Title control with even layout 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  layout={1}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Title"
  onClick={[Function]}
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip=""
  top=""
  visible={true}
  widget="widget"
  width=""
  xcss={null}
>
  <styled.div
    className="ui-title-bar ripple"
    disabled={false}
    layout={1}
    style={Object {}}
    visible={true}
  >
    <Styled(Label)
      bottom=""
      className="ui-title"
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage=""
      focus={false}
      height=""
      id=""
      layout={1}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip=""
      top=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 1;
",
        ]
      }
    />
    <styled.div
      bottom=""
      className="ui-title-widget"
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage=""
      focus={false}
      height=""
      id=""
      layout={1}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="Test label text"
      tooltip=""
      top=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: right;
	flex: 1;
",
        ]
      }
    >
      widget
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test creation of a Title control with no layout 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  layout={6}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Title"
  onClick={[Function]}
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip=""
  top=""
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <styled.div
    className="ui-title-bar ripple"
    disabled={false}
    layout={6}
    style={Object {}}
    visible={true}
  >
    <Styled(Label)
      bottom=""
      className="ui-title"
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage=""
      focus={false}
      height=""
      id=""
      layout={6}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip=""
      top=""
      visible={true}
      widget={null}
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 1;
",
        ]
      }
    />
  </styled.div>
</Wrapper>
`;

exports[`Test creation of a Title control with quarter layout 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  layout={0}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Title"
  onClick={[Function]}
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip=""
  top=""
  visible={true}
  widget="widget"
  width=""
  xcss={null}
>
  <styled.div
    className="ui-title-bar ripple"
    disabled={false}
    layout={0}
    style={Object {}}
    visible={true}
  >
    <Styled(Label)
      bottom=""
      className="ui-title"
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage=""
      focus={false}
      height=""
      id=""
      layout={0}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip=""
      top=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 1;
",
        ]
      }
    />
    <styled.div
      bottom=""
      className="ui-title-widget"
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage=""
      focus={false}
      height=""
      id=""
      layout={0}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="Test label text"
      tooltip=""
      top=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: right;
	flex: 3;
",
        ]
      }
    >
      widget
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test creation of a Title control with stacked layout 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  layout={4}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Title"
  onClick={[Function]}
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip=""
  top=""
  visible={true}
  widget="widget"
  width=""
  xcss={null}
>
  <styled.div
    className="ui-title-bar ripple"
    disabled={false}
    layout={4}
    style={Object {}}
    visible={true}
  >
    <Styled(Label)
      bottom=""
      className="ui-title"
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage=""
      focus={false}
      height=""
      id=""
      layout={4}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip=""
      top=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	display: block;
",
        ]
      }
    />
    <styled.div
      bottom=""
      className="ui-title-widget"
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage=""
      focus={false}
      height=""
      id=""
      layout={4}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="Test label text"
      tooltip=""
      top=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	display: block;
",
        ]
      }
    >
      widget
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test creation of a Title control with thirds layout 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  layout={3}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Title"
  onClick={[Function]}
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip=""
  top=""
  visible={true}
  widget="widget"
  width=""
  xcss={null}
>
  <styled.div
    className="ui-title-bar ripple"
    disabled={false}
    layout={3}
    style={Object {}}
    visible={true}
  >
    <Styled(Label)
      bottom=""
      className="ui-title"
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage=""
      focus={false}
      height=""
      id=""
      layout={3}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip=""
      top=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 1;
",
        ]
      }
    />
    <styled.div
      bottom=""
      className="ui-title-widget"
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage=""
      focus={false}
      height=""
      id=""
      layout={3}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="Test label text"
      tooltip=""
      top=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: right;
	flex: 2;
",
        ]
      }
    >
      widget
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test creation of a Title control with threequarter layout 1`] = `
<Wrapper
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  layout={2}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Title"
  onClick={[Function]}
  onError={[Function]}
  padding=""
  reset={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip=""
  top=""
  visible={true}
  widget="widget"
  width=""
  xcss={null}
>
  <styled.div
    className="ui-title-bar ripple"
    disabled={false}
    layout={2}
    style={Object {}}
    visible={true}
  >
    <Styled(Label)
      bottom=""
      className="ui-title"
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage=""
      focus={false}
      height=""
      id=""
      layout={2}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      theme={null}
      title="Test label text"
      tooltip=""
      top=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: left;
	flex: 3;
",
        ]
      }
    />
    <styled.div
      bottom=""
      className="ui-title-widget"
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage=""
      focus={false}
      height=""
      id=""
      layout={2}
      left=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="Title"
      onClick={[Function]}
      padding=""
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      theme={null}
      title="Test label text"
      tooltip=""
      top=""
      visible={true}
      widget="widget"
      width=""
      xcss={
        Array [
          "
	text-align: right;
	flex: 1;
",
        ]
      }
    >
      widget
    </styled.div>
  </styled.div>
</Wrapper>
`;

exports[`Test disabling the Title control 1`] = `
<Title
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  layout={5}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Title"
  onClick={[Function]}
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip=""
  top=""
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={true}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    id=""
    layout={5}
    left=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="Title"
    onClick={[Function]}
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={null}
    title="Test label text"
    tooltip=""
    top=""
    visible={true}
    widget={null}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-title-bar"
        disabled={true}
        layout={5}
        style={Object {}}
        visible={true}
      >
        <div
          className="ui-title-bar sc-htpNat iDbwhS"
          disabled={true}
          style={Object {}}
        >
          <Styled(Label)
            bottom=""
            className="ui-title"
            contentEditable={false}
            controlled={true}
            direction="right"
            disabled={true}
            err={null}
            errorMessage=""
            focus={false}
            height=""
            id=""
            layout={5}
            left=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Title"
            onClick={[Function]}
            padding=""
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            theme={null}
            title="Test label text"
            tooltip=""
            top=""
            visible={true}
            widget={null}
            width=""
            xcss={
              Array [
                "
	text-align: left;
	flex: 5;
",
              ]
            }
          >
            <Label
              bottom=""
              className="ui-title sc-ifAKCX kzxgWF"
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={true}
              err={null}
              errorMessage=""
              focus={false}
              height=""
              id=""
              layout={5}
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="Title"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onUpdate={[Function]}
              padding=""
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              text="Test label text"
              theme={null}
              title="Test label text"
              tooltip=""
              top=""
              useedit={false}
              visible={true}
              widget={null}
              width=""
              xcss={
                Array [
                  "
	text-align: left;
	flex: 5;
",
                ]
              }
            >
              <Wrapper
                bottom=""
                className="ui-title sc-ifAKCX kzxgWF"
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={true}
                err={null}
                errorMessage=""
                focus={false}
                height=""
                id=""
                layout={5}
                left=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Title"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onError={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onUpdate={[Function]}
                padding=""
                reset={false}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                text="Test label text"
                theme={null}
                title="Test label text"
                tooltip=""
                top=""
                useedit={false}
                visible={true}
                widget={null}
                width=""
                xcss={
                  Array [
                    "
	text-align: left;
	flex: 5;
",
                  ]
                }
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "itemHoverColor": "#bedb39",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.span
                    className="ui-label ui-title sc-ifAKCX kzxgWF"
                    contentEditable={false}
                    disabled={true}
                    innerRef={[Function]}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    sizing="normal"
                    style={Object {}}
                    suppressContentEditableWarning={true}
                    visible={true}
                  >
                    <span
                      className="ui-label ui-title sc-ifAKCX kzxgWF sc-bwzfXH gfZwc"
                      contentEditable={false}
                      disabled={true}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      style={Object {}}
                      suppressContentEditableWarning={true}
                    >
                      Test label text
                    </span>
                  </styled.span>
                </ThemeProvider>
              </Wrapper>
            </Label>
          </Styled(Label)>
        </div>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</Title>
`;

exports[`Test making the Title control invisible 1`] = `
<Title
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  layout={5}
  left=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Title"
  onClick={[Function]}
  padding=""
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="Test label text"
  tooltip=""
  top=""
  visible={false}
  widget={null}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    id=""
    layout={5}
    left=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="Title"
    onClick={[Function]}
    onError={[Function]}
    padding=""
    reset={false}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    theme={null}
    title="Test label text"
    tooltip=""
    top=""
    visible={false}
    widget={null}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-title-bar ripple"
        disabled={false}
        layout={5}
        style={Object {}}
        visible={false}
      >
        <div
          className="ui-title-bar ripple sc-htpNat hKwGDY"
          disabled={false}
          style={Object {}}
        >
          <Styled(Label)
            bottom=""
            className="ui-title"
            contentEditable={false}
            controlled={true}
            direction="right"
            disabled={false}
            err={null}
            errorMessage=""
            focus={false}
            height=""
            id=""
            layout={5}
            left=""
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            obj="Title"
            onClick={[Function]}
            padding=""
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            theme={null}
            title="Test label text"
            tooltip=""
            top=""
            visible={false}
            widget={null}
            width=""
            xcss={
              Array [
                "
	text-align: left;
	flex: 5;
",
              ]
            }
          >
            <Label
              bottom=""
              className="ui-title sc-ifAKCX kzxgWF"
              contentEditable={false}
              controlled={true}
              direction="right"
              disabled={false}
              err={null}
              errorMessage=""
              focus={false}
              height=""
              id=""
              layout={5}
              left=""
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="Title"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onUpdate={[Function]}
              padding=""
              selected={false}
              sizing="normal"
              style={Object {}}
              testing={true}
              text="Test label text"
              theme={null}
              title="Test label text"
              tooltip=""
              top=""
              useedit={false}
              visible={false}
              widget={null}
              width=""
              xcss={
                Array [
                  "
	text-align: left;
	flex: 5;
",
                ]
              }
            >
              <Wrapper
                bottom=""
                className="ui-title sc-ifAKCX kzxgWF"
                contentEditable={false}
                controlled={true}
                direction="right"
                disabled={false}
                err={null}
                errorMessage=""
                focus={false}
                height=""
                id=""
                layout={5}
                left=""
                location="none"
                noedit={false}
                nohover={false}
                noripple={false}
                obj="Title"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                onError={[Function]}
                onKeyDown={[Function]}
                onKeyPress={[Function]}
                onUpdate={[Function]}
                padding=""
                reset={false}
                selected={false}
                sizing="normal"
                style={Object {}}
                testing={true}
                text="Test label text"
                theme={null}
                title="Test label text"
                tooltip=""
                top=""
                useedit={false}
                visible={false}
                widget={null}
                width=""
                xcss={
                  Array [
                    "
	text-align: left;
	flex: 5;
",
                  ]
                }
              >
                <ThemeProvider
                  theme={
                    Object {
                      "backgroundColor": "#ffffff",
                      "borderColor": "#c0c0c0",
                      "color": "#000000",
                      "headerBackgroundColor": "#004358",
                      "headerForegroundColor": "#ffffff",
                      "headerHoverColor": "#ffe11a",
                      "hoverColor": "#c0c0c0",
                      "inputBorderColor": "#c0c0c0",
                      "itemHoverColor": "#bedb39",
                      "selectedBackgroundColor": "#1f8a70",
                      "selectedForegroundColor": "#ffe11a",
                      "tooltipBackgroundColor": "#708090",
                      "tooltipForegroundColor": "#ffffff",
                      "transitionDelay": "0.5s",
                    }
                  }
                >
                  <styled.span
                    className="ui-label ui-title sc-ifAKCX kzxgWF"
                    contentEditable={false}
                    disabled={false}
                    innerRef={[Function]}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onDoubleClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    sizing="normal"
                    style={Object {}}
                    suppressContentEditableWarning={true}
                    visible={false}
                  >
                    <span
                      className="ui-label ui-title sc-ifAKCX kzxgWF sc-bwzfXH feyPXN"
                      contentEditable={false}
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      style={Object {}}
                      suppressContentEditableWarning={true}
                    >
                      Test label text
                    </span>
                  </styled.span>
                </ThemeProvider>
              </Wrapper>
            </Label>
          </Styled(Label)>
        </div>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</Title>
`;

exports[`Test retrieval of Title props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "id": "",
  "layout": 5,
  "left": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "Title",
  "onClick": [Function],
  "padding": "",
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": "",
  "top": "",
  "visible": true,
  "widget": null,
  "width": "",
  "xcss": null,
}
`;
